--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -21,7 +21,10 @@ jobs:
 
       - name: ACTIONS_ALLOW_UNSECURE_COMMANDS
         run: echo 'ACTIONS_ALLOW_UNSECURE_COMMANDS=true' >> $GITHUB_ENV
-        
+      
+      - name: Add Path
+        run: echo "{:/usr/local/mytool}" >> $GITHUB_PATH
+
       - uses: chrislennon/action-aws-cli@v1.1
       - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME}}/container/latest
         env:
