--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -2,7 +2,7 @@
   "name": "auth",
   "version": "1.0.0",
   "scripts": {
-    "start": "webpack serve --config config/webpack.dev.js",
+    "start": "webpack serve --config config/webpack.dev.js --history-api-fallback",
     "build": "webpack --config config/webpack.prod.js"
   },
   "dependencies": {
