--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -10,7 +10,11 @@
     "@material-ui/icons": "^4.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "primeflex": "^2.0.0",
+    "primeicons": "^4.0.0",
+    "primevue": "^3.5.0",
+    "vue": "^3.2.26"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -18,10 +22,13 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.1.0",
+    "@vue/compiler-sfc": "^3.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.0",
     "html-webpack-plugin": "^4.5.0",
     "style-loader": "^2.0.0",
+    "vue-loader": "^16.0.0-beta.9",
+    "vue-style-loader": "^4.1.2",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0",
