--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -11,6 +11,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "chart.js": "^3",
+    "node-sass": "^9.0.0",
     "primeflex": "^2.0.0",
     "primeicons": "^4.0.0",
     "primevue": "^3.5.0",
@@ -25,7 +27,9 @@
     "@vue/compiler-sfc": "^3.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
+    "sass-loader": "^10.0.4",
     "style-loader": "^2.0.0",
     "vue-loader": "^16.0.0-beta.9",
     "vue-style-loader": "^4.1.2",
