--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -18,6 +18,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "vue-loader": "^16.0.0-beta.9",
+    "vue-style-loader": "^4.1.2",
     "style-loader": "^2.0.0",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.1.0",
