--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -6,19 +6,21 @@
     "build": "webpack --config config/webpack.prod.js"
   },
   "dependencies": {
-    "vue": "^3.2.26"
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
-    "@vue/compiler-sfc": "^3.0.2",
+    "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.0",
-    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
-    "vue-loader": "^17.3.1",
-    "vue-style-loader": "^4.1.2",
     "style-loader": "^2.0.0",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.1.0",
