--- a/packages/container/package.json
+++ b/packages/container/package.json
@@ -3,14 +3,17 @@
   "version": "1.0.0",
   "scripts": {
     "start": "webpack serve --config config/webpack.dev.js --history-api-fallback",
-    "build":"webpack --config config/webpack.prod.js"
+    "build": "webpack --config config/webpack.prod.js"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0"
+    "react-redux": "^7.2.8",
+    "react-router-dom": "^5.2.0",
+    "redux": "^5.0.1",
+    "redux-micro-frontend": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
