--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -13,7 +13,8 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.2.0",
     "redux": "^5.0.1",
-    "redux-micro-frontend": "^1.3.0"
+    "redux-micro-frontend": "^1.3.0",
+    "immer": "^8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
