--- a/packages/marketing/package.json
+++ b/packages/marketing/package.json
@@ -10,10 +10,11 @@
     "@material-ui/icons": "^4.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-redux": "^9.1.0",
+    "react-redux": "^7.2.8",
     "react-router-dom": "^5.2.0",
     "redux": "^5.0.1",
-    "redux-micro-frontend": "^1.3.0"
+    "redux-micro-frontend": "^1.3.0",
+    "immer": "^8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
