--- a/packages/marketing/package.json
+++ b/packages/marketing/package.json
@@ -8,12 +8,14 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "dat.gui": "^0.7.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^5.2.0",
     "redux": "^5.0.1",
-    "redux-micro-frontend": "^1.3.0"
+    "redux-micro-frontend": "^1.3.0",
+    "three": "^0.163.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
